[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ui/SubwaySimplified.gd" type="Script" id=1]
[ext_resource path="res://audios/effects/subway_engine.mp3" type="AudioStream" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://images/backgrounds/poster_no_character.jpg" type="Texture" id=4]
[ext_resource path="res://extra/voices/subway/pont_de_bois.mp3" type="AudioStream" id=5]
[ext_resource path="res://fonts/Guisol.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.247059 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 4
outline_color = Color( 0.247059, 0.247059, 0.247059, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="SubwaySimplified" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Canvas/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PosterNoCharacter" type="TextureRect" parent="Canvas/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="Content" type="Control" parent="Canvas/Container"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0

[node name="Left" type="Panel" parent="Canvas/Container/Content"]
margin_left = 16.0
margin_top = 16.0
margin_right = 399.0
margin_bottom = 154.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Canvas/Container/Content/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -43.5
margin_right = 79.5
margin_bottom = -20.5
text = "Direction"
align = 1

[node name="Label2" type="Label" parent="Canvas/Container/Content/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.5
margin_top = -17.0
margin_right = 119.5
margin_bottom = 17.0
custom_colors/font_color = Color( 0.870588, 0.0313726, 0.0823529, 1 )
custom_colors/font_outline_modulate = Color( 0.870588, 0.0313726, 0.0823529, 1 )
custom_fonts/font = SubResource( 2 )
text = "Saint-Philibert"

[node name="TravelLeft" type="Button" parent="Canvas/Container/Content/Left"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -27.0
text = "Prendre vers cette direction"

[node name="Right" type="Panel" parent="Canvas/Container/Content"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -399.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 154.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Canvas/Container/Content/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -43.5
margin_right = 79.5
margin_bottom = -20.5
text = "Direction"
align = 1

[node name="Label2" type="Label" parent="Canvas/Container/Content/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.5
margin_top = -17.0
margin_right = 141.5
margin_bottom = 17.0
custom_colors/font_color = Color( 0.992157, 0.768627, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.768627, 0.133333, 1 )
custom_fonts/font = SubResource( 2 )
text = "Cité Scientifique"

[node name="TravelRight" type="Button" parent="Canvas/Container/Content/Right"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -27.0
text = "Prendre vers cette direction"

[node name="Button" type="Button" parent="Canvas/Container/Content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -137.0
margin_top = -43.0
margin_right = 137.0
margin_bottom = -16.0
text = "Aller à la surface"

[node name="StationName" type="Label" parent="Canvas/Container/Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.5
margin_top = 48.0
margin_right = 141.5
margin_bottom = 82.0
custom_colors/font_color = Color( 0.870588, 0.0313726, 0.0823529, 1 )
custom_fonts/font = SubResource( 2 )
text = "Cité Scientifique"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Canvas/Container/Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.5
margin_top = 16.0
margin_right = 141.5
margin_bottom = 50.0
text = "Arrêt actuel"
align = 1
valign = 1

[node name="SubwayTransition" type="ColorRect" parent="Canvas/Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SubwayEngine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Voices"

[connection signal="pressed" from="Canvas/Container/Content/Left/TravelLeft" to="." method="_on_TravelLeft_pressed"]
[connection signal="pressed" from="Canvas/Container/Content/Right/TravelRight" to="." method="_on_TravelRight_pressed"]
[connection signal="pressed" from="Canvas/Container/Content/Button" to="." method="_on_Button_pressed"]
